--- a/src/features/experience/experience.module.css
+++ b/src/features/experience/experience.module.css
@@ -4,11 +4,12 @@
   display: flex;
   background-color: transparent;
   overflow-x: hidden;
+  border: 0;
   z-index: 0;
   margin-inline: var(--spacing-5xl);
   margin-top: var(--spacing-4xl);
-  min-height: 80vh;
-  max-height: 100vh;
+  min-height: 100vh;
+  padding-top: 10vh;
 }
 
 .circle {
