--- a/src/features/projects/evade/evade.module.css
+++ b/src/features/projects/evade/evade.module.css
@@ -9,7 +9,6 @@
   padding-inline: var(--spacing-3xl);
   padding-block: var(--spacing-xl);
   margin-top: var(--spacing-2xl);
-  margin-bottom: 35vh;
   display: flex;
   flex-direction: row;
   gap: var(--spacing-xl);
@@ -45,7 +44,6 @@
 }
 
 .deviceMockup {
-  flex: 1;
   padding: 16px;
   background: #0e0e0e;
   border-radius: 24px;
@@ -60,6 +58,7 @@
 
 .deviceMockup img {
   width: 100%;
+  height: 100%;
   border-radius: var(--spacing-md);
 }
 
