--- a/src/features/projects/freshdeal/freshdealMobile.module.css
+++ b/src/features/projects/freshdeal/freshdealMobile.module.css
@@ -47,15 +47,19 @@
   overflow: hidden;
   margin-left: auto;
   min-width: 50%;
-  max-width: 50%;
-  height: 60vh;
+  /* max-width: 50%; */
+  height: 80vh;
+  border-radius: 10%;
 }
 
 .gallery {
   position: relative;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   border-radius: 16px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .gallery::before {
@@ -72,7 +76,7 @@
 
 .cards {
   position: absolute;
-  width: 14rem;
+  width: 16rem;
 
   left: 50%;
   transform: translate(-50%);
@@ -81,12 +85,34 @@
 .card {
   list-style: none;
 
-  width: 14rem;
-  height: 20rem;
+  width: 16rem;
+  height: 26rem;
   text-align: center;
   position: absolute;
   left: 0;
 }
+
+.phoneScaledWrapper {
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.phoneScaled {
+  /* transform: scale(0.7); */
+  /* transform-origin: center; */
+}
+
+/* Perfect fit for SVG images - screen now matches SVG aspect ratio */
+.phoneScaled :global(.screen .appScreenshot) {
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+}
+
+/* Improve crispness and centering; remove tilt for embedded mockup */
+/* Overrides no longer needed; handled via props and component CSS */
 
 .slideInfo {
   display: flex;
